--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+.env
+.serverless
+bin
+*.pyc
+*.pyo
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/goland
 # Edit at https://www.toptal.com/developers/gitignore?templates=goland
 
